--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,12 +23,12 @@ if (BuildMVMP OR BuildMVDED)
 	endif()
 
 	# zlib
-	if(NOT UseInternalZLIB)
-		find_package(ZLIB)
-		if(NOT ZLIB_FOUND)
-			message(FATAL_ERROR "zlib dev files not found! Install it or set UseInternalZLIB ON")
-		endif()
-	endif()
+	#if(NOT UseInternalZLIB)
+	#	find_package(ZLIB)
+	#	if(NOT ZLIB_FOUND)
+	#		message(FATAL_ERROR "zlib dev files not found! Install it or set UseInternalZLIB ON")
+	#	endif()
+	#endif()
 	set(MVMPDEDIncludeDirs ${MVMPDEDIncludeDirs} ${ZLIB_INCLUDE_DIRS})
 	
 	# minizip
@@ -280,10 +280,10 @@ if (BuildMVMP)
 	# Libraries
 	
 	# OpenGL
-	find_package(OpenGL)
-	if(NOT OPENGL_FOUND)
-		message(FATAL_ERROR "OpenGL dev files not found!")
-	endif()
+	#find_package(OpenGL)
+	#if(NOT OPENGL_FOUND)
+	#	message(FATAL_ERROR "OpenGL dev files not found!")
+	#endif()
 	set(MVMPIncludeDirs ${MVMPIncludeDirs} ${OPENGL_INCLUDE_DIR})
 	set(MVMPLibraries ${MVMPLibraries} ${OPENGL_LIBRARIES})
 
@@ -296,10 +296,10 @@ if (BuildMVMP)
 		set(MVMPIncludeDirs ${MVMPIncludeDirs} "${LIBDir}/OpenAL/include")
 	else()
 		# OpenAL
-		find_package(OpenAL)
-		if(NOT OPENAL_FOUND)
-			message(FATAL_ERROR "OpenAL dev files not found!")
-		endif()
+		#find_package(OpenAL)
+		#if(NOT OPENAL_FOUND)
+		#	message(FATAL_ERROR "OpenAL dev files not found!")
+		#endif()
 		set(MVMPIncludeDirs ${MVMPIncludeDirs} ${OPENAL_INCLUDE_DIR})
 		set(MVMPLibraries ${MVMPLibraries} ${OPENAL_LIBRARY})
 	endif()
@@ -313,10 +313,10 @@ if (BuildMVMP)
 		
 		set(MVMPIncludeDirs ${MVMPIncludeDirs} "${LIBDir}/SDL2/include")
 	else()
-		find_package(SDL2)
-		if(NOT SDL2_FOUND)
-			message(FATAL_ERROR "libsdl2 dev files not found!")
-		endif()
+		#find_package(SDL2)
+		#if(NOT SDL2_FOUND)
+		#	message(FATAL_ERROR "libsdl2 dev files not found!")
+		#endif()
 		set(MVMPIncludeDirs ${MVMPIncludeDirs} ${SDL2_INCLUDE_DIR})
 		set(MVMPLibraries ${MVMPLibraries} ${SDL2_LIBRARY})
 	endif()
@@ -334,12 +334,12 @@ if (BuildMVMP)
 	set(MVMPIncludeDirs ${MVMPIncludeDirs} ${JPEG_INCLUDE_DIR})
 
 	# PNG
-	if(NOT UseInternalPNG)
-		find_package(PNG)
-		if(NOT PNG_FOUND)
-			message(FATAL_ERROR "libpng dev files not found! Install it or set UseInternalPNG ON")
-		endif()
-	endif()
+	#if(NOT UseInternalPNG)
+	#	find_package(PNG)
+	#	if(NOT PNG_FOUND)
+	#		message(FATAL_ERROR "libpng dev files not found! Install it or set UseInternalPNG ON")
+	#	endif()
+	#endif()
 	set(MVMPIncludeDirs ${MVMPIncludeDirs} ${PNG_INCLUDE_DIRS})
 
 	# Source
@@ -482,7 +482,7 @@ if (BuildMVMP)
 		set_source_files_properties(${RESDir}/mv.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 		set_target_properties(${MVMP} PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${RESDir}/mv.plist")
 	else()
-		add_executable(${MVMP} ${MVMPFiles})
+		add_library(${MVMP} SHARED ${MVMPFiles})
 	endif()
 
 	if(MSVC)
