--- a/android-project/app/build.gradle
+++ b/android-project/app/build.gradle
@@ -11,22 +11,22 @@ android {
     compileSdkVersion 31
     defaultConfig {
         if (buildAsApplication) {
-            applicationId "org.libsdl.app"
+            applicationId "org.mvdevs.jk2mv"
         }
         minSdkVersion 16
         targetSdkVersion 31
         versionCode 1
-        versionName "1.0"
+        versionName "1.4-309-g3c1c228"
         externalNativeBuild {
-            ndkBuild {
-                arguments "APP_PLATFORM=android-16"
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            //ndkBuild {
+            //    arguments "APP_PLATFORM=android-16"
+            //    abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            //}
+            cmake {
+                arguments "-DANDROID_APP_PLATFORM=android-16", "-DANDROID_STL=c++_static"
+                // abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+                abiFilters 'arm64-v8a'
             }
-            // cmake {
-            //     arguments "-DANDROID_APP_PLATFORM=android-16", "-DANDROID_STL=c++_static"
-            //     // abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-            //     abiFilters 'arm64-v8a'
-            // }
         }
     }
     buildTypes {
@@ -43,13 +43,21 @@ android {
         sourceSets.main {
             jniLibs.srcDir 'libs'
         }
+		sourceSets {
+			debug {
+				jniLibs.srcDirs += "src/main/jniLibs/debug"
+			}
+			release {
+				jniLibs.srcDirs += "src/main/jniLibs/release"
+			}
+		}
         externalNativeBuild {
-            ndkBuild {
-                path 'jni/Android.mk'
+            //ndkBuild {
+            //    path 'jni/Android.mk'
+            //}
+            cmake {
+                path 'jni/CMakeLists.txt'
             }
-            // cmake {
-            //     path 'jni/CMakeLists.txt'
-            // }
         }
        
     }
