--- a/android-project/app/jni/CMakeLists.txt
+++ b/android-project/app/jni/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.6)
 
-project(GAME)
+project(JK2MV)
 
 # armeabi-v7a requires cpufeatures library
 # include(AndroidNdkModules)
@@ -16,5 +16,5 @@ add_subdirectory(SDL)
 #add_subdirectory(SDL_ttf)
 
 # Your game and its CMakeLists.txt are in a subfolder named "src"
-add_subdirectory(src)
+#add_subdirectory(src)
 
