Add cvar ui_JKA to switch between JKA and JK2 UI

--- a/assets/CMakeLists.txt
+++ b/assets/CMakeLists.txt
@@ -43,11 +43,11 @@ set(AssetsFiles
 	"gfx/2d/crosshaira.tga"
 	"gfx/2d/crosshairj.tga"
 	"gfx/2d/demorec.tga"
+	"gfx/2d/mp_yteam_symbol.tga"
 	"gfx/2d/mplus_1m_bold.tga"
 	"gfx/2d/mplus_1m_bold_mip1.tga"
 	"gfx/2d/mplus_1m_bold_mip2.tga"
 	"gfx/2d/mplus_1m_bold_mip3.tga"
-	"gfx/2d/mp_yteam_symbol.tga"
 	"gfx/effects/mp_y_forcefield.jpg"
 	"gfx/effects/mp_y_forcefield_d.jpg"
 	"gfx/effects/mp_y_forcefield_d1.jpg"
@@ -107,7 +107,6 @@ set(AssetsFiles
 	"sound/effects/hitsoundteam.wav"
 	"strip/menus_jka.sp"
 	"strip/mv.sp"
-	"ui/jk2mpingame.txt"
 	"ui/jk2mp/controls.menu"
 	"ui/jk2mp/createserver.menu"
 	"ui/jk2mp/credits.menu"
@@ -117,7 +116,8 @@ set(AssetsFiles
 	"ui/jk2mp/ingame_camera.menu"
 	"ui/jk2mp/ingame_controls.menu"
 	"ui/jk2mp/ingame_player.menu"
-	"ui/jk2mp/ingame_player2.menu"
+	"ui/jk2mp/ingame_player2_jka.menu"
+	"ui/jk2mp/ingame_player_jka.menu"
 	"ui/jk2mp/ingame_playerforce.menu"
 	"ui/jk2mp/ingame_saber.menu"
 	"ui/jk2mp/ingame_server.menu"
@@ -134,6 +134,7 @@ set(AssetsFiles
 	"ui/jk2mp/rules_items.menu"
 	"ui/jk2mp/rules_weapons.menu"
 	"ui/jk2mp/setup.menu"
+	"ui/jk2mpingame.txt"
 	"ui/jk2mv/download_info.menu"
 	"ui/jk2mv/download_popup.menu"
 	"vm/cgame_102.map"
